--- a/server-side/src/main/resources/application.properties
+++ b/server-side/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskscape
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.hibernate.ddl-auto= create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+
+spring.main.allow-bean-definition-overriding=true
+server.error.include-message=always
+logging.level.root=INFO
+logging.level.com.example.Elite.Edge.Properties=DEBUG
+server.port=8085
+
