--- a/server-side/src/main/resources/application.properties
+++ b/server-side/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskscape
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=abasjama
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
